--- a/client/src/layouts/MainLayout/MainLayout.css
+++ b/client/src/layouts/MainLayout/MainLayout.css
@@ -1,5 +1,4 @@
 .main-layout-container {
-    max-width: 1300px;
+    max-width: 100%;
     margin: 80px auto 0;
-    /* padding: 0 15px 20px; */
 }
